force-app/main/default/objects/LinkedIn_Post__c/LinkedIn_Post__c.object-meta.xml
<CustomObject>
    <label>LinkedIn Post</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedIn Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>