force-app/main/default/objects/LinkedIn_Post__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>