force-app/main/default/objects/LinkedIn_Post__c/fields/LinkedInPostID__c.field-meta.xml
<CustomField>
    <fullName>LinkedInPostID__c</fullName>
    <label>LinkedIn Post ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>