force-app/main/default/objects/LinkedIn_Post__c/fields/Supporting_Url__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Url__c</fullName>
    <label>Supporting Url</label>
    <type>Url</type>
</CustomField>