force-app/main/default/objects/LinkedIn_Post__c/fields/Thumbnail_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image_Url__c</fullName>
    <label>Thumbnail Image Url</label>
    <type>Url</type>
</CustomField>